@@ -247,7 +247,36 @@ def zeros(shape, dtype=np.float, **kwargs):
     if dtype.kind == "S":
         return fill(shape=shape, dflt='', dtype=dtype, **kwargs)
     else:
-        return fill(shape=shape, dflt=0., dtype=dtype, **kwargs)
+        return fill(shape=shape, dflt=0, dtype=dtype, **kwargs)
+
+
+def ones(shape, dtype=np.float, **kwargs):
+    """
+    ones(shape, dtype=float, **kwargs)
+
+    Return a new carray object of given shape and type, filled with ones.
+
+    Parameters
+    ----------
+    shape : int
+        Shape of the new array, e.g., ``2``.  Only 1-d shapes supported.
+    dtype : data-type, optional
+        The desired data-type for the array, e.g., `numpy.int8`.  Default is
+        `numpy.float64`.
+    kwargs : list of parameters or dictionary
+        Any parameter supported by the carray constructor.
+
+    Returns
+    -------
+    out : carray
+        Array of ones with the given shape and dtype.
+
+    """
+    dtype = np.dtype(dtype)
+    if dtype.kind == "S":
+        return fill(shape=shape, dflt='1', dtype=dtype, **kwargs)
+    else:
+        return fill(shape=shape, dflt=1, dtype=dtype, **kwargs)
 
 
 def arange(start=None, stop=None, step=None, dtype=None, **kwargs):
